--- a/public/main.css
+++ b/public/main.css
@@ -4893,7 +4893,7 @@ footer {
 .banner {
   color: #fff;
   background: #333;
-  padding: 2rem;
+  padding: 2rem 0 0 0;
   margin-bottom: 2rem; }
   .banner h1 {
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
