--- a/public/main.css
+++ b/public/main.css
@@ -53,6 +53,32 @@ input[type="text"], textarea {
   color : #403f3f; 
 }
 
+a, .previous{
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+a, .next{
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+.previous {
+    background-color: #4CAF50;
+    color: black;
+}
+
+.next {
+    background-color: #4CAF50;
+    color: black;
+}
+
+.round {
+    border-radius: 50%;
+}
+
 ol ol,
 ul ul,
 ol ul,
